--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DentalCare - Sistema de Agendamento</title>
-    <meta name="description" content="Sistema completo de agendamento de consultas para clínicas odontológicas" />
+    <meta name="description" content="Sistema completo de agendamento para clínicas odontológicas">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
